--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="title"
+      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer"
+    />
+    <meta
+      name="keywords"
+      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer"
+    />
+    <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
