Added Yahgozie Nwosu to keywords

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="title"
-      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer"
+      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer, Yahgozie Nwosu"
     />
     <meta
       name="keywords"
-      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer"
+      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer, Yahgozie Nwosu"
     />
     <meta
       name="description"
-      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer"
+      content="Software Developer, c# developer, backend developer, frontend developer, web development, fullstack developer, Yahgozie Nwosu"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
